--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Document</title>
+<title>Урок 1</title>
 <meta​ charset​=​"utf-8"​>
 
 <p><b>Задание 1:</b> Задать температуру в градусах по Цельсию. </p>
