--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
 <p><b>Задание 1:</b> Задать температуру в градусах по Цельсию. </p>
 <script>
-  var сelsius = prompt("Введите температуру в градусах по Цельсию", 35);
+  var сelsius = prompt("Введите температуру в градусах по Цельсию", 0);
   var fahrenheit = (9 / 5) * сelsius + 32;
   alert(fahrenheit);
 
   document.write("Градусы по Цельсию <b>" + сelsius + "</b> => ");
-  document.write("Градусы по Цельсию <b>" + fahrenheit + "</b>");
+  document.write("Градусы по Фаренгейту <b>" + fahrenheit + "</b>");
 </script>
 
 
