--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>Урок 1</title>
 <meta​ charset​=​"utf-8"​>
 
-<p><b>Задание 1:</b> Задать температуру в градусах по Цельсию. </p>
+<p><b>Задание 1:</b> Задать температуру в градусах по Цельсию. Вывести в alert соответствующую температуру в градусах по Фаренгейту.</p>
 <script>
   var сelsius = prompt("Введите температуру в градусах по Цельсию", 0);
   var fahrenheit = (9 / 5) * сelsius + 32;
