--- a/Lesson-1.html
+++ b/Lesson-1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>Урок 1</title>
-<meta​ charset​=​"utf-8"​>
+<meta​ charset​=​"utf-8">
 
 <p><b>Задание 1:</b> Задать температуру в градусах по Цельсию. Вывести в alert соответствующую температуру в градусах по Фаренгейту.</p>
 <script>
