--- a/Lesson-7/index.html
+++ b/Lesson-7/index.html
@@ -74,7 +74,7 @@
     var gameBlockId = document.getElementById('gameZone');
     var infoBlockId = document.getElementById('info');
     document.addEventListener('keydown', dispatcherEventKey);
-    // Указывает размер блока
+    // Указывает размер блока в стилях
     gameBlockId.style.width = widthFildPx + "px";
 
     function generationMap(cols, rows) {
@@ -102,18 +102,18 @@
         cells[python[i]].className = 'part_body';
       }
 
-      var _positionAddNewStepNum = convertAxesToPosition(direction);
+      var _positionNewStepNum = convertAxesToPosition(direction);
 
       // Проверяет присутсвует ли голова на следущем ходу в собственном теле
-      if (python.includes(python[0] + _positionAddNewStepNum)) {
+      if (python.includes(python[0] + _positionNewStepNum)) {
         alert("Караул.. змейка ест саму себя!! Вы проиграли..");
         location.reload();
       }
 
-      // python[0] += _positionAddNewStepNum;
+      // python[0] += _positionNewStepNum;
 
       // Высчитывает следующий ход, когда стены прозрачные
-      python[0] = moveThroughWall(python[0], _positionAddNewStepNum);
+      python[0] = moveThroughWall(python[0], _positionNewStepNum);
       cells[python[0]].className = 'part_head';
 
       // Проверяет равны ли координаты головы змейки и еды
@@ -147,8 +147,8 @@
       cells[_num].className = 'food';
     }
 
-    // Высчитывает координаты нового хода для головы змейки  
-    function moveThroughWall(_positionHeadNum, _positionAddStepNum) {
+    // Высчитывает координаты нового хода сквозь стены для головы змейки  
+    function moveThroughWall(_positionHeadNum, _positionNewStepNum) {
       var axesHead = converterPositionToAxes(_positionHeadNum);
 
       if (direction.x == -1 && axesHead.x <= 0)
@@ -163,7 +163,7 @@
       if (direction.y == +1 && axesHead.y + 1 >= rows)
         return _positionHeadNum % cols;
 
-      return _positionHeadNum += _positionAddStepNum;
+      return _positionHeadNum += _positionNewStepNum;
     }
     
     // Конвертирует декартову систему координат в однуосевую
