--- a/Lesson-7/index.html
+++ b/Lesson-7/index.html
@@ -62,7 +62,7 @@
       , positionFood = []
       , positionObstacle
       , countOfFoodEaten = 0
-      , speedOfMovement = 400
+      , speedOfMovement = 300
       , isPauesed = false;
 
     // Высчитывает начальные позиции для змейки
@@ -74,7 +74,7 @@
     var gameBlockId = document.getElementById('gameZone');
     var infoBlockId = document.getElementById('info');
     document.addEventListener('keydown', dispatcherEventKey);
-    // Указывает размер блока
+    // Указывает в стиле размер блока
     gameBlockId.style.width = widthFildPx + "px";
 
     function generationMap(cols, rows) {
@@ -96,39 +96,39 @@
 
       cells[lastPart].className = '';
 
-      // Указывает для каждой части тела змейки позиции от предидущей части тела
+      // Задает для каждой части тела змейки позиции предыдущей части тела
       for (var i = python.length - 1; i > 0; i--) {
         python[i] = python[i - 1];
         cells[python[i]].className = 'part_body';
       }
 
-      var _positionAddNewStepNum = convertAxesToPosition(direction);
+      var _positionNewStepNum = convertAxesToPosition(direction);
 
       // Проверяет присутсвует ли голова на следущем ходу в собственном теле
-      if (python.includes(python[0] + _positionAddNewStepNum)) {
+      if (python.includes(python[0] + _positionNewStepNum)) {
         alert("Караул.. змейка ест саму себя!! Вы проиграли..");
         location.reload();
       }
 
-      // python[0] += _positionAddNewStepNum;
+      // python[0] += _positionNewStepNum;
 
       // Высчитывает следующий ход, когда стены прозрачные
-      python[0] = moveThroughWall(python[0], _positionAddNewStepNum);
+      python[0] = moveThroughWall(python[0], _positionNewStepNum);
       cells[python[0]].className = 'part_head';
 
       // Проверяет равны ли координаты головы змейки и еды
-      // повышает уровень сложности и создает новоую еду
+      // повышает уровень сложности и создает новую еду
       if (python[0] == positionFood[0]) {
         createPositionFood();
         levelGameUp();
       }
+      // console.log(positionFood)
 
-      // Проверяет заданы ли координаты для препятствия
-      if (!positionObstacle) {
+      // Проверяет задана ли позиция для препятствия
+      if (positionObstacle == undefined) {
         createPositionObstacle();
       }
-
-      // Попала ли голова змейки в стенку
+      // Попала ли голова змейки в искуственную стенку
       if (python[0] == positionObstacle) {
         alert("Змейка разбилась об стенку!! Вы проиграли..");
         location.reload();
@@ -139,7 +139,7 @@
     function createPositionFood() {
       var _num = Math.floor(Math.random() * countSectors);
       if (python.includes(_num)) {
-        console.log("Ппц.. Еда сама хотела попасть в желудок змейки, не через рот");
+        console.log("Ппц.. Еда сама хотела попасть сразу в желудок змейки");
         createPositionFood();
         return;
       }
@@ -147,8 +147,8 @@
       cells[_num].className = 'food';
     }
 
-    // Высчитывает координаты нового хода для головы змейки  
-    function moveThroughWall(_positionHeadNum, _positionAddStepNum) {
+    // Высчитывает координаты нового хода сквозь стены для головы змейки  
+    function moveThroughWall(_positionHeadNum, _positionNewStepNum) {
       var axesHead = converterPositionToAxes(_positionHeadNum);
 
       if (direction.x == -1 && axesHead.x <= 0)
@@ -163,17 +163,17 @@
       if (direction.y == +1 && axesHead.y + 1 >= rows)
         return _positionHeadNum % cols;
 
-      return _positionHeadNum += _positionAddStepNum;
+      return _positionHeadNum += _positionNewStepNum;
     }
     
-    // Конвертирует декартову систему координат в однуосевую
+    // Конвертирует позицию на одной оси в декартову систему
     function converterPositionToAxes(_positionNum) {
       var x = _positionNum % cols;
       var y = Math.floor(_positionNum / cols);
       return { x: x, y: y };
     };
-
-    // Конвертирует позицию на одной оси в декартову систему
+    
+    // Конвертирует декартову систему координат в однуосевую
     function convertAxesToPosition(direction) {
       var position = direction.y * cols + direction.x;
       return position;
@@ -204,7 +204,6 @@
       infoBlockId.innerHTML = 'Food: ' + countOfFoodEaten + ' / Speed: ' + speedOfMovement + 'ms';
     }
 
-
     // Функция изменяет темп игры и подсчитывает съеденную еду
     function levelGameUp() {
       ++countOfFoodEaten;
@@ -214,7 +213,7 @@
       infoGame();
     }
 
-    // Запуск таймера с изменяющимися интеравалами в меньшую сторону
+    // Запуск таймера с изменяющимися интеравалами в меньшую сторону по уровню
     // Инициирует движение змейки 
     var timerIteration;
 
